# ankithis

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/api/: .dockerignore  Dockerfile  Dockerfile.dev  alembic.ini  entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_add_users_table.py  003_add_bloom_level_to_card_plans.py
apps/api/src/ankithis_api/: __init__.py  app.py  auth.py  config.py  db.py  middleware.py  rate_limit.py  worker.py
apps/api/src/ankithis_api/llm/: client.py  schemas.py
apps/api/src/ankithis_api/llm/prompts/: stage_0.py  stage_a.py  stage_b.py  (+5 more)
apps/api/src/ankithis_api/models/: __init__.py  artifact.py  card.py  content_profile.py  document.py  enums.py  generation.py  user.py  video_source.py
apps/api/src/ankithis_api/routers/: auth.py  cards.py  export.py  generate.py  jobs.py  regenerate.py  review.py  sections.py  upload.py  youtube.py
apps/api/src/ankithis_api/schemas/: document.py  generation.py  upload.py
apps/api/src/ankithis_api/services/: chunker.py  exporter.py  parser.py  pipeline.py  qc.py  section_annotator.py  storage.py
apps/api/src/ankithis_api/tasks/: generation.py
apps/api/tests/: conftest.py  test_adaptive_chunker.py  test_adaptive_extraction.py  test_adaptive_stages.py  test_auth.py  test_celery_task.py  test_chunker.py  test_classification.py  test_classification_schema.py  test_critique.py  test_dedup.py  test_enums.py  test_exporter.py  test_frame_sampler.py  test_models_profile.py  test_pipeline_integration.py  test_qc.py  test_qc_enhanced.py  test_rate_limit.py  test_section_annotator.py  test_stages.py  test_storage.py  test_text_parser.py  test_upload.py  test_visual_assessment.py  test_youtube_assembler.py  test_youtube_metadata.py  test_youtube_router.py  test_youtube_transcript.py
(+41 files in other folders)
