[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ankithis"
version = "0.1.0"
description = "Extract core principles from PDFs and generate high-quality Anki cloze flashcard decks"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.18",
    "pdfplumber>=0.11",
    "genanki>=0.13",
    "anthropic>=0.52",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "httpx>=0.28",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
